--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Select ONE Additional
   <body>
     <div class="container">
       <div>
-        <h2 id="end"> 🌷🌸🌹🌺🌷 | Flower Season</h2>
+        <h2 id="end"> 🌷🌸🌹🌺🌷🌻 | Flower Season</h2>
         <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
       </div>
     </div>
